--- a/style.css
+++ b/style.css
@@ -2,35 +2,46 @@ body {
   margin: 0;
 }
 
-.bg {
+.preview-scrren {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
+  height: 44.3vw;
 }
 
-.bg img {
+.preview-scrren img {
   width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
 }
 
 .header {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  z-index: 1;
   top: 0;
   width: 100%;
   height: 100px;
   background-color: black;
-  display: flex;
   opacity: 0.7;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.logo {
-  margin-left: 250px;
+.wrapper {
+  max-width: 1155px;
+  flex: 0 1 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .number a {
   color: #fff;
   text-decoration: none;
-  margin-left: 150px;
   font-size: 14px;
   font-family: sans-serif;
 }
@@ -38,22 +49,21 @@ body {
 .menu {
   display: flex;
   align-items: center;
-  margin-left: 300px;
+  gap: 50px;
 }
 
 .menu a {
   color: #fff;
   text-decoration: none;
-  margin-left: 50px;
   font-size: 14px;
   font-family: sans-serif;
 }
 
-.title{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  top: 400px;
+.title {
+  color: white;
   text-align: center;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 56px;
+  letter-spacing: -1.6px;
 }
